--- a/app/src/main/res/layout/list_row.xml
+++ b/app/src/main/res/layout/list_row.xml
@@ -87,7 +87,7 @@
             <TextView
                 android:id="@+id/author"
                 android:textSize="15sp"
-                android:textColor="#FFFFFF"
+                android:textColor="#EEEEEE"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="News Author"
