--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -65,9 +65,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
-                android:text="May Experience Glitches With Step Counter"
+                android:text="May Experience Glitches With Step \n                        Counter"
                 android:textSize="20sp"
-                android:layout_gravity="center"/>
+                android:layout_gravity="center_horizontal"/>
 
 
             <TextView
