--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true">
 
         <ScrollView
@@ -315,7 +316,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_below="@+id/cpricon"
                                 android:layout_centerHorizontal="true"
-                                android:text="CPR"
+                                android:text="Unconscious"
                                 android:textColor="@color/colorFont"
                                 android:textSize="18sp" />
 
